[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openclio"
authors = [
    {name = "Danielle Ensign", email = "phylliida.dev@gmail.com"},
]
description = "Open source version of Anthropic's Clio: A system for privacy-preserving insights into real-world AI use"
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT License"}
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    "umap-learn",
    "concave_hull",
    "tqdm",
    "dataclasses",
    "vllm>=0.6.0",
    "pandas",
    "sentence_transformers",
    "numpy",
    "scikit-learn",
    "scipy",
    "torch>=2.5.0",
    "cloudpickle",
    "setuptools",
    "pyarrow",
    "faiss-cpu",
    "cryptography",
    "numba>=0.60.0"
]
dynamic = ["version"]

[project.optional-dependencies]
gpu = [
    # Note: faiss-gpu is not available via pip, install via conda:
    # conda install -c pytorch faiss-gpu
    # Or build from source: https://github.com/facebookresearch/faiss
]

[project.urls]
Homepage = "https://github.com/Phylliida/OpenClio.git"
Issues = "https://github.com/Phylliida/OpenClio/issues"